fix ul spacing

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -59,7 +59,3 @@ table {
 p {
 	margin: 5px 0px;
 }
-
-ul {
-	margin: 10px 0px;
-}
